Added demo login details

--- a/views/login.pug
+++ b/views/login.pug
@@ -16,10 +16,10 @@ body
             h2.heading-secondary
                 | Welcome
             .login__form__group
-                input#email.login__form__input(type='email' required='')
+                input#email.login__form__input(type='email' required='' value="admin@demo.com")
                 span.login__form__span(data-placeholder='Email')
             .login__form__group
-                input#password.login__form__input(type='password' required='')
+                input#password.login__form__input(type='password' required='' value="password123")
                 span.login__form__span(data-placeholder='Password')
             .login__form__group
                 input.btn.btn--blue.btn--animated(type='submit' value='Login')
