--- a/views/login.pug
+++ b/views/login.pug
@@ -14,7 +14,7 @@ body
                 span.heading-primary--sub Cleaning Services
         form.login__form  
             h2.heading-secondary
-                | Welcome
+                | Demo
             .login__form__group
                 input#email.login__form__input(type='email' required='' value="admin@demo.com")
                 span.login__form__span(data-placeholder='Email')
