Fixed error handling

--- a/views/_header.pug
+++ b/views/_header.pug
@@ -15,7 +15,7 @@ header.header
         a.user-nav__user-btn(href='/profile')
             svg.user-nav__icon
                 use(xlink:href='/img/sprite.svg#icon-user')
-            span.user-nav__user-name Katya
+            span.user-nav__user-name Admin
         a.user-nav__user-btn.user-nav__user-btn-logout.user-nav__icon-box-logout
             span.user-nav__user-logout Logout
             svg.user-nav__icon
