Adding decimal places

--- a/views/add_shift.pug
+++ b/views/add_shift.pug
@@ -23,7 +23,7 @@ block content
                 label.form__label(for='input') Date
                 i.form__bar
             .form__group
-                input#hours(type='number' required='required')
+                input#hours(type='number' required='required' step='.01')
                 label.form__label(for='input') Hours
                 i.form__bar
             .form__group
