Adding decimal places

--- a/views/add_shift.pug
+++ b/views/add_shift.pug
@@ -27,11 +27,11 @@ block content
                 label.form__label(for='input') Hours
                 i.form__bar
             .form__group
-                input#amount(type='number' required='required')
+                input#amount(type='number' required='required' step='.01')
                 label.form__label(for='input') Amount
                 i.form__bar
             .form__group
-                input#commission(type='number' required='required')
+                input#commission(type='number' required='required' step='.01')
                 label.form__label(for='input') Commission
                 i.form__bar
             .form__group
